tests/specs/check/json5/main.out
TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const _value: string = foo.value;
      ~~~~~~
    at [WILDLINE]/main.ts:3:7

error: Type checking failed.
