tests/specs/check/json5/main.ts
import foo from "./foo.json5" with { type: "json5" };

const _value: string = foo.value;
